stl-test/Tests/coordinate/bounds/Negative/test9.cpp
//#error
#include <coordinate>
int main(void)
{
    std::bounds<2> cord{55, 66}
    cord[3];
}
